# generate-random

./: Cargo.toml  README.md
derive-macro/: Cargo.toml  README.md
derive-macro/src/: handle_enum.rs  handle_struct.rs  lib.rs
lib/: Cargo.toml
lib/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
